--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -1,4 +1,4 @@
-name: ci-release
+name: Ci release
 
 on:
   schedule:
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        python-version: ["3.10", "3.9", "3.8"]
+        python-version: ["3.10", "3.9", "3.8", "3.7"]
     env:
       python-version: ${{ matrix.python-version}}
     runs-on: ${{ matrix.os }}
